# achieve-alchemy

./: README.md  bun.lockb  package.json  pnpm-lock.yaml
app/: README.md  bun.lockb  db.sqlite  package.json  tailwind.config.js
app/src/: bindings.ts  globals.css  main.tsx  routeTree.gen.ts
app/src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
app/src-tauri/migrations/2024-02-06-000001_create_pomodoro_tables/: down.sql  up.sql
app/src-tauri/migrations/2025-02-05-120500_create_habits/: down.sql  up.sql
app/src-tauri/migrations/2025-02-05-143858_create_habit_completions/: up.sql
app/src-tauri/src/: db.rs  lib.rs  models.rs  schema.rs
app/src/components/: animated-button.tsx  edit-pomodoro-preferences-button.tsx  lucide-icon.tsx  page-title.tsx  pomodoro-form.tsx
app/src/contexts/: PomodoroContext.tsx
app/src/hooks/: use-activate-license-key.tsx  use-dimensions.tsx  use-pomodoro.tsx  use-toggle-habit-completion.tsx
app/src/routes/: __root.tsx  habits.tsx  index.tsx  pomodoro.tsx
app/src/stores/: global.ts
apps/app/: bun.lockb  package.json  tailwind.config.js  vite.config.ts
apps/app/src/: bindings.ts  globals.css  routeTree.gen.ts
apps/app/src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
apps/backend/: drizzle.config.ts  package.json  wrangler.json
apps/backend/src/: index.ts
apps/marketing/: package.json  pnpm-lock.yaml
apps/marketing/scripts/: removeDarkmode.js
marketing/: astro.config.mjs  bun.lockb  pnpm-lock.yaml  readme.md  tailwind.config.js
marketing/src/config/: config.json
server/: bun.lockb
(+110 files in other folders)
