[package]
name = "achievealchemy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "achievealchemy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
taurpc = "0.4.1"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
# specta-typescript = "0.0.9"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
uuid = {version = "1.7.0", features = ["v4"] }
